--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -26,11 +26,11 @@ $(eval KSU_VERSION=$(shell expr 10000 + $(KSU_GIT_VERSION) + 200))
 $(info -- KernelSU version: $(KSU_VERSION))
 ccflags-y += -DKSU_VERSION=$(KSU_VERSION)
 else # Allow overriding KernelSU version if its not a submodule
-$(warning "KSU_GIT_VERSION not defined! It is better to make KernelSU a git submodule!")
-ifdef KSU_EXTERNAL_VERSION
+ifneq ($(KSU_EXTERNAL_VERSION),)
 $(info -- KernelSU external version: $(KSU_EXTERNAL_VERSION))
 ccflags-y += -DKSU_VERSION=$(KSU_EXTERNAL_VERSION)
 else # If there is no .git file, the default version will be passed.
+$(warning "KSU_GIT_VERSION not defined! It is better to make KernelSU a git submodule!")
 ccflags-y += -DKSU_VERSION=16
 endif
 endif
