--- a/.github/workflows/ksud.yml
+++ b/.github/workflows/ksud.yml
@@ -9,6 +9,10 @@ on:
         required: false
         type: string
         default: ubuntu-latest
+      pack_lkm:
+        required: false
+        type: boolean
+        default: true
       use_cache:
         required: false
         type: boolean
@@ -22,7 +26,12 @@ jobs:
         fetch-depth: 0
 
     - name: Download artifacts
-      uses: actions/download-artifact@v5
+      uses: actions/download-artifact@v6
+    
+    - name: Prepare LKM fies
+      if: ${{ inputs.pack_lkm }}
+      run: |
+        cp android*-lkm/*_kernelsu.ko ./userspace/ksud/bin/aarch64/
         
     - name: Setup rustup
       run: |
@@ -40,7 +49,7 @@ jobs:
       run: CROSS_NO_WARNINGS=0 cross build --target ${{ inputs.target }} --release --manifest-path ./userspace/ksud/Cargo.toml
 
     - name: Upload ksud artifact
-      uses: actions/upload-artifact@v4
+      uses: actions/upload-artifact@v5
       with:
         name: ksud-${{ inputs.target }}
         path: userspace/ksud/target/**/release/ksud*
