--- a/.github/workflows/build-manager-common.yml
+++ b/.github/workflows/build-manager-common.yml
@@ -1,11 +1,12 @@
-name: Build Manager Common
+name: Build Manager (common)
 
 on:
   workflow_call:
     inputs:
-      spoofed:
-        type: boolean
-        default: false
+      manager_type:
+        description: 'Manager type'
+        type: string
+        default: "normal"
 
 jobs:
   build-manager-common:
@@ -21,9 +22,8 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Randomize PKG names
-        if: inputs.spoofed == true
-        id: spoofed_state
+      - name: Randomize package name
+        if: inputs.manager_type == 'spoofed'
         run: |
           echo "- Randomizing me.weishu.kernelsu ..."
           chmod +x randomizer
@@ -33,7 +33,7 @@ jobs:
       - name: Get artifact name
         id: real_artifact_name
         run: |
-          if [ "${{ inputs.spoofed }}" == "true" ]; then
+          if [ "${{ inputs.manager_type }}" == "spoofed" ]; then
             echo "MGR_ARTIFACT_NAME=manager-spoofed" >> $GITHUB_OUTPUT
             echo "MPS_ARTIFACT_NAME=mappings-spoofed" >> $GITHUB_OUTPUT
           else
@@ -70,28 +70,36 @@ jobs:
           java-version: 21
 
       - name: Setup Gradle
-        uses: gradle/actions/setup-gradle@v4
+        uses: gradle/actions/setup-gradle@v5
 
       - name: Setup Android SDK
         uses: android-actions/setup-android@v3
 
       - name: Download arm64 ksud
-        uses: actions/download-artifact@v5
+        uses: actions/download-artifact@v6
         with:
           name: ksud-aarch64-linux-android
           path: .
 
       - name: Download arm ksud
-        uses: actions/download-artifact@v5
+        uses: actions/download-artifact@v6
         with:
           name: ksud-armv7-linux-androideabi
           path: .
 
+      - name: Download x86_64 ksud
+        uses: actions/download-artifact@v6
+        with:
+          name: ksud-x86_64-linux-android
+          path: .
+
       - name: Copy ksud to app jniLibs
         run: |
-          cp -f ../aarch64-linux-android/release/ksud ../manager/app/src/main/jniLibs/arm64-v8a/libksud.so
           mkdir -p app/src/main/jniLibs/armeabi-v7a
+          mkdir -p app/src/main/jniLibs/x86_64
+          cp -f ../aarch64-linux-android/release/ksud ../manager/app/src/main/jniLibs/arm64-v8a/libksud.so
           cp -f ../armv7-linux-androideabi/release/ksud ../manager/app/src/main/jniLibs/armeabi-v7a/libksud.so
+          cp -f ../x86_64-linux-android/release/ksud ../manager/app/src/main/jniLibs/x86_64/libksud.so
 
       - name: Build with Gradle
         run: |
@@ -105,14 +113,14 @@ jobs:
           ./gradlew clean assembleRelease
 
       - name: Upload build artifact
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@v5
         if: ${{ ( github.event_name != 'pull_request' && github.ref == 'refs/heads/main' ) || github.ref_type == 'tag' }}
         with:
           name: ${{ steps.real_artifact_name.outputs.MGR_ARTIFACT_NAME }}
           path: manager/app/build/outputs/apk/release/*.apk
 
       - name: Upload mappings
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@v5
         if: ${{ ( github.event_name != 'pull_request' && github.ref == 'refs/heads/main' ) || github.ref_type == 'tag' }}
         with:
           name: ${{ steps.real_artifact_name.outputs.MPS_ARTIFACT_NAME }}
@@ -129,7 +137,7 @@ jobs:
           RUN_URL: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
         run: |
           if [ ! -z "${{ secrets.BOT_TOKEN }}" ]; then
-            if [ "${{ inputs.spoofed }}" == "true" ]; then
+            if [ "${{ inputs.manager_type }}" == "spoofed" ]; then
               export TITLE="Spoofed Manager"
             else
               export TITLE="Manager"
