--- a/.github/workflows/build-manager-manual.yml
+++ b/.github/workflows/build-manager-manual.yml
@@ -4,103 +4,49 @@ on:
   workflow_dispatch:
 
 jobs:
+  build-ksuinit:
+    strategy:
+      matrix:
+        include:
+          - target: aarch64-unknown-linux-musl
+          - target: x86_64-unknown-linux-musl
+    uses: ./.github/workflows/build-ksuinit.yml
+    with:
+      target: ${{ matrix.target }}
+    secrets: inherit
+
+  build-lkm:
+    uses: ./.github/workflows/build-lkm.yml
+    secrets: inherit
+
   build-ksud:
+    needs: [build-lkm, build-ksuinit]
     strategy:
       matrix:
         include:
           - target: aarch64-linux-android
             os: ubuntu-latest
+            pack_ksuinit: true
           - target: armv7-linux-androideabi
             os: ubuntu-latest
+            pack_ksuinit: false
+          - target: x86_64-linux-android
+            os: ubuntu-latest
+            pack_ksuinit: true
     uses: ./.github/workflows/ksud.yml
     with:
       target: ${{ matrix.target }}
       os: ${{ matrix.os }}
+      pack_ksuinit: ${{ matrix.pack_ksuinit }}
 
   build-manager:
     needs: build-ksud
-    runs-on: ubuntu-latest
-    environment: signing
-    defaults:
-      run:
-        working-directory: ./manager
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v5
-        with:
-          fetch-depth: 0
-
-      - name: Setup need_upload
-        id: need_upload
-        run: |
-          if [ ! -z "${{ secrets.BOT_TOKEN }}" ]; then
-            echo "UPLOAD=true" >> $GITHUB_OUTPUT
-          else
-            echo "UPLOAD=false" >> $GITHUB_OUTPUT
-          fi
-
-      - name: Write key
-        run: |
-          if [ ! -z "${{ secrets.KEYSTORE }}" ]; then
-            {
-              echo KEYSTORE_PASSWORD='${{ secrets.KEYSTORE_PASSWORD }}'
-              echo KEY_ALIAS='${{ secrets.KEY_ALIAS }}'
-              echo KEY_PASSWORD='${{ secrets.KEY_PASSWORD }}'
-              echo KEYSTORE_FILE='key.jks'
-            } >> gradle.properties
-            echo ${{ secrets.KEYSTORE }} | base64 -d > key.jks
-          fi
-
-      - name: Setup Java
-        uses: actions/setup-java@v5
-        with:
-          distribution: temurin
-          java-version: 21
-
-      - name: Setup Gradle
-        uses: gradle/actions/setup-gradle@v4
-
-      - name: Setup Android SDK
-        uses: android-actions/setup-android@v3
-
-      - name: Download arm64 ksud
-        uses: actions/download-artifact@v5
-        with:
-          name: ksud-aarch64-linux-android
-          path: .
-
-      - name: Download arm ksud
-        uses: actions/download-artifact@v5
-        with:
-          name: ksud-armv7-linux-androideabi
-          path: .
-
-      - name: Copy ksud to app jniLibs
-        run: |
-          cp -f ../aarch64-linux-android/release/ksud ../manager/app/src/main/jniLibs/arm64-v8a/libksud.so
-          mkdir -p app/src/main/jniLibs/armeabi-v7a
-          cp -f ../armv7-linux-androideabi/release/ksud ../manager/app/src/main/jniLibs/armeabi-v7a/libksud.so
-
-      - name: Build with Gradle
-        run: |
-          {
-            echo 'org.gradle.parallel=true'
-            echo 'org.gradle.vfs.watch=true'
-            echo 'org.gradle.jvmargs=-Xmx2048m'
-            echo 'android.native.buildOutput=verbose'
-          } >> gradle.properties
-          sed -i 's/org.gradle.configuration-cache=true//g' gradle.properties
-          ./gradlew clean assembleRelease
-
-      - name: Upload build artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: manager
-          path: manager/app/build/outputs/apk/release/*.apk
-
-      - name: Upload mappings
-        uses: actions/upload-artifact@v4
-        with:
-          name: "mappings"
-          path: "manager/app/build/outputs/mapping/release/"
+    strategy:
+      matrix:
+        include:
+          - manager_type: normal
+    uses: ./.github/workflows/build-manager-common.yml
+    secrets: inherit
+    with:
+      manager_type: ${{ matrix.manager_type }}
+      need_upload: false
