--- a/.github/workflows/ksud.yml
+++ b/.github/workflows/ksud.yml
@@ -13,12 +13,16 @@ on:
         required: false
         type: boolean
         default: true
+      pack_ksuinit:
+        required: true
+        type: boolean
+        default: true
       use_cache:
         required: false
         type: boolean
         default: true
 jobs:
-  build:
+  build-ksud:
     runs-on: ${{ inputs.os }}
     steps:
     - uses: actions/checkout@v5
@@ -27,12 +31,24 @@ jobs:
 
     - name: Download artifacts
       uses: actions/download-artifact@v6
-    
-    - name: Prepare LKM fies
+
+    - name: Prepare LKM files
       if: ${{ inputs.pack_lkm }}
       run: |
         cp android*-lkm/*_kernelsu.ko ./userspace/ksud/bin/aarch64/
-        
+
+    # TODO: Do not hardcode
+    - name: Prepare ksuinit files
+      if: ${{ inputs.pack_ksuinit }}
+      run: |
+        cp ksuinit-aarch64/ksuinit ./userspace/ksud/bin/aarch64/
+        cp ksuinit-x86_64/ksuinit ./userspace/ksud/bin/x86_64/
+        echo "-- aarch64 --"
+        file ./userspace/ksud/bin/aarch64/*
+        echo ""
+        echo "-- x86_64 --"
+        file ./userspace/ksud/bin/x86_64/*
+
     - name: Setup rustup
       run: |
         rustup update stable
