--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,7 +3,7 @@ updates:
   - package-ecosystem: github-actions
     directory: /
     schedule:
-      interval: daily
+      interval: weekly
     groups:
       actions:
         patterns:
@@ -11,7 +11,7 @@ updates:
   - package-ecosystem: cargo
     directory: userspace/ksud
     schedule:
-      interval: daily
+      interval: weekly
     allow:
       - dependency-type: "all"
     groups:
@@ -21,7 +21,7 @@ updates:
   - package-ecosystem: cargo
     directory: userspace/ksuinit
     schedule:
-      interval: daily
+      interval: weekly
     allow:
       - dependency-type: "all"
     groups:
@@ -31,7 +31,7 @@ updates:
   - package-ecosystem: gradle
     directory: manager
     schedule:
-      interval: daily
+      interval: weekly
     groups:
       maven:
         patterns:
@@ -39,7 +39,7 @@ updates:
   - package-ecosystem: npm
     directory: website
     schedule:
-      interval: daily
+      interval: weekly
     allow:
       - dependency-type: "all"
     groups:
