--- a/userspace/ksuinit/Cargo.toml
+++ b/userspace/ksuinit/Cargo.toml
@@ -1,15 +1,15 @@
 [package]
 name = "ksuinit"
 version = "2.0.0"
-edition = "2021"
+edition = "2024"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 
 # for elf parsing
-goblin = { git = "https://github.com/tiann/goblin" }
-scroll = "0.12"
+goblin = { git = "https://github.com/rksuorg/goblin" }
+scroll = "0.13"
 
 anyhow = "1"
 # If you want to use the following dependencies, please use aarch64-unknown-linux-musl & x86_64-unknown-linux-musl to compile statically
