--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -96,6 +96,10 @@ ifneq ($(shell grep -q "__poll_t" \
 ccflags-y += -DKSU_NO___POLL_T
 endif
 
+ifeq ($(shell grep -q "anon_inode_getfd_secure" $(srctree)/fs/anon_inodes.c; echo $$?),0)
+ccflags-y += -DKSU_HAS_GETFD_SECURE
+endif
+
 # Checks Samsung
 ifeq ($(shell grep -q "CONFIG_KDP_CRED" $(srctree)/kernel/cred.c; echo $$?),0)
 ccflags-y += -DSAMSUNG_UH_DRIVER_EXIST
